--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 19 May 2007
+  Last Modified: 21 May 2007
   Number: 2
-  Version: 105
+  Version: 106
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -735,14 +735,14 @@ C<$x.WHICH> eqv C<$y.WHICH>).
     Exception   Perl exception
     Code        Base class for all executable objects
     Block       Executable objects that have lexical scopes
-    List        Lazy Perl list (composed of Seq and Range parts)
+    List        Lazy Perl list (composed of immutables and iterators)
     Seq         Completely evaluated (hence immutable) sequence
-    Range       A pair of Ordered endpoints; gens lazy Seq in list context
-    Set         Unordered Seq that allows no duplicates
-    Bag         Unordered Seq that allows duplicates
-    Junction    Sets with additional behaviours
-    Pair        Seq of two elements that serves as a one-element Mapping
-    Mapping     Pairs with no duplicate keys
+    Range       A pair of Ordered endpoints; gens immutables when iterated
+    Set         Unordered values that allow no duplicates
+    Bag         Unordered values that allow duplicates
+    Junction    Sets with additional behaviors
+    Pair        Two elements that serve as key/value in a one-element Mapping
+    Mapping     Pair set with no duplicate keys
     Signature   Function parameters (left-hand side of a binding)
     Capture     Function call arguments (right-hand side of a binding)
     Blob        An undifferentiated mass of bits
@@ -750,7 +750,8 @@ C<$x.WHICH> eqv C<$y.WHICH>).
 =head2 Mutable types
 
 Objects with these types have distinct C<.WHICH> values that do not change
-even if the object's contents change.
+even if the object's contents change.  (Routines are considered mutable
+because they can be wrapped in place.)
 
     Scalar      Perl scalar
     Array       Perl array
