Dehuffmanized "super" to "nonfinal" for clarity and parsimony.
git-svn-id: http://svn.pugscode.org/pugs@23850 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 19 May 2007
+  Last Modified: 21 May 2007
   Number: 12
-  Version: 51
+  Version: 52
 
 =head1 Overview
 
@@ -1649,7 +1649,7 @@ in a boolean context.
 
 =head1 Open vs Closed Classes
 
-By default, all classes in Perl are non-final ("super"), which means
+By default, all classes in Perl are non-final, which means
 you can potentially derive from them.  They are also open, which means
 you can add more methods to them, though you have to be explicit that
 that is what you're doing:
@@ -1672,16 +1672,16 @@ This merely changes the application's default to closed and final,
 which means that at the end of the main compilation (C<CHECK> time)
 the optimizer is allowed to look for candidate classes to close or
 finalize.  But anyone (including the main application) can request
-that any class stay open or super, and the class closer/finalizer
+that any class stay open or nonfinal, and the class closer/finalizer
 must honor that.
 
-    use class :open<Mammal Insect> :super<Str>
+    use class :open<Mammal Insect> :nonfinal<Str>
 
 These properties may also be specified on the class definition:
 
     class Mammal is open {...}
     class Insect is open {...}
-    class Str is super {...}
+    class Str is nonfinal {...}
 
 or by lexically scoped pragma around the class definition:
 
@@ -1691,7 +1691,7 @@ or by lexically scoped pragma around the class definition:
         class Insect {...}
     }
     {
-        use class :super;
+        use class :nonfinal;
         class Str {...}
     }
 
