clarification suggested by Ruud++
git-svn-id: http://svn.pugscode.org/pugs@23851 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -738,8 +738,8 @@ C<$x.WHICH> eqv C<$y.WHICH>).
     List        Lazy Perl list (composed of immutables and iterators)
     Seq         Completely evaluated (hence immutable) sequence
     Range       A pair of Ordered endpoints; gens immutables when iterated
-    Set         Unordered values that allow no duplicates
-    Bag         Unordered values that allow duplicates
+    Set         Unordered group of values that allows no duplicates
+    Bag         Unordered group of values that allows duplicates
     Junction    Sets with additional behaviors
     Pair        Two elements that serve as key/value in a one-element Mapping
     Mapping     Pair set with no duplicate keys
