typo noticed by (John Macdonald and Bob Rogers)>>++
git-svn-id: http://svn.pugscode.org/pugs@23855 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -227,7 +227,7 @@ function, so both these methods use the same invocant:
 
 where each call to the block would bind a new invocant for the
 C<.waste> method, each of which is likely different from the original
-invocant to the C<.hast> method.)
+invocant to the C<.haste> method.)
 
 Conditional statement modifiers work as in Perl 5.  So do the
 implicit conditionals implied by short-circuit operators.  Note though that
