Applied s:g{ '[-1]' } = '[*-1]' patch from Dataweaver++
git-svn-id: http://svn.pugscode.org/pugs@23856 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -1379,7 +1379,7 @@ are aliases into the C<$/> object.
 
 =item *
 
-The C<$#foo> notation is dead.  Use C<@foo.end> or C<@foo[-1]> instead.
+The C<$#foo> notation is dead.  Use C<@foo.end> or C<@foo[*-1]> instead.
 (Or C<@foo.shape[$dimension]> for multidimensional arrays.)
 
 =back
