Allow closures as indirect methods as suggested by blazer++
git-svn-id: http://svn.pugscode.org/pugs@23858 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 21 May 2007
+  Last Modified: 29 May 2007
   Number: 12
-  Version: 52
+  Version: 53
 
 =head1 Overview
 
@@ -221,6 +221,18 @@ Dot notation can omit the invocant if it's in C<$_>:
 It can use a simple scalar variable for the method name:
 
     $obj.$methodname(1,2,3)
+
+The variable may contain either the name of a method or a closure
+object.  In the latter case the closure is called with the object
+as its first argument, so that a closure may be used to abstract a
+"navigational" path through a data structure without specifying the
+root of the path till later.
+
+    $locator = -> $root, $x, $y { $root.<foo>[$x]<bar>{$y}[3] }
+    $obj.$locator(42,"baz")  # $obj<foo>[42]<bar><baz>[3]
+
+    $locator = { .<here> }
+    $obj.$locator            # $obj<here>
 
 The method name may also be quoted with either single or double quotes:
 
