bogus ; termination noticed by pmichaud++
git-svn-id: http://svn.pugscode.org/pugs@23862 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -804,7 +804,7 @@ regexes for the same category, differentiated only by the symbol they
 match.  The symbol is specified as part of the "long name".  It may also
 be matched within the rule using C<< <sym> >>, like this:
 
-    proto token sigil;
+    proto token sigil { }
     multi token sigil:sym<$>  { <sym> }
     multi token sigil:sym<@>  { <sym> }
     multi token sigil:sym<@@> { <sym> }
